syntax = "proto3";

option csharp_namespace = "GRPCService.Protos";

package Customers;

service GrpcCustomer{
	rpc GetAll (Empty) returns (CustomerList);
	rpc GetCustomer (IDRequest) returns (Customer);
}

message Empty{}

message IDRequest{
	string Id=1;
}

message Customer{
	string Id=1;
	string Name=2;
	string Address=3;
}

message CustomerList{
	repeated Customer customers=1;
}
